docs(backend): Update swagger docs
